--- a/frontend/style.css
+++ b/frontend/style.css
@@ -95,3 +95,92 @@ html, body {
 .card-text.price {
   font-size: 20px;
 }
+
+.modal-container {
+  width: 40%;
+  height: 60%;
+  background-color: white;
+  position: absolute;
+  z-index: 99;
+  box-shadow: 1px 3px 8px #888888;
+  left: 30%;
+  top: 10%;
+  visibility: hidden;
+  border-radius: 20px;
+}
+
+.modal-background {
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.5;
+  filter: brightness(50%);
+  position: absolute;
+  z-index: 98;
+  visibility: hidden;
+}
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
+.product-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.product-info {
+  width: 50%;
+  height: 60%;
+  border: 1px solid #BFBFBF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0px;
+}
+
+.to-cart-button {
+  width: 125px;
+  height: 40px;
+  background-color: #FF7B01;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  letter-spacing: 2px;
+  font-weight: bolder;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  cursor: pointer;
+}
+
+.product-image {
+  width: 122px;
+  height: 114px;
+}
+
+.align-item-prop {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.item-prop-container {
+  width: 50%;
+}
+
+.quantity-selector {
+  width: 100px;
+  height: 40px;
+  border: 1px solid;
+  border-radius: 10px;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+}
