--- a/frontend/style.css
+++ b/frontend/style.css
@@ -157,6 +157,7 @@ html, body {
   font-weight: bolder;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   cursor: pointer;
+  transition: width, background-color 0.5s ease;
 }
 
 .product-image {
@@ -182,4 +183,9 @@ html, body {
   display: flex;
   justify-content:space-around;
   align-items: center;
+}
+
+.added-to-cart {
+  width: 150px;
+  background-color: green;
 }
