--- a/frontend/style.css
+++ b/frontend/style.css
@@ -189,3 +189,58 @@ html, body {
   width: 150px;
   background-color: green;
 }
+
+/*top bar styles*/
+.top-bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  background: #F5F5F5;
+}
+
+.top-bar spam {
+  font-size: 14px;
+  font-weight: 500;
+  color: #8E8E8E;
+}
+
+.top-bar-nav {
+  display: flex;
+  width: 100%;
+}
+
+.small-logo {
+  /*font-family: 'Sansation';*/
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #FF7B01;
+  flex-grow: 1;
+  text-align: center;
+  padding-left: 200px;
+}
+
+.top-bar-links {
+  display: flex;
+  list-style-type: none;
+  width: 200px;
+}
+
+.top-bar-links li {
+  padding-right: 20px;
+}
+
+.top-bar-links li a {
+  font-size: 20px;
+  color: #8E8E8E;
+}
+
+@media  (max-width: 700px) {
+  .small-logo {
+    padding-left: 20px;
+    text-align: initial;
+   }
+  .top-bar spam {
+    display: none;
+  }
+}
