--- a/frontend/style.css
+++ b/frontend/style.css
@@ -95,3 +95,10 @@ html, body {
 .card-text.price {
   font-size: 20px;
 }
+
+
+@media only screen and (max-width: 576px) {
+  .background-card {
+    width: 95%;
+  }
+}
