add logout, remove products page  left border

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -90,6 +90,7 @@ html, body {
   color: #FF7B01;
   font-size: 18px;
   text-decoration: underline;
+  cursor: pointer;
 }
 .card-title {
   font-size: 28px;
