--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,3 +1,7 @@
+:root {
+  font-size: 62.5%;
+}
+
 /* Login - Web */
 .login,.signup {
   background: url("img/frutas.png") no-repeat;
@@ -6,6 +10,17 @@
 html, body {
   height:100%;
 }
+
+label {
+  font-size: 1.6rem;
+}
+
+.form-control {
+  font-size: 1.6rem;
+  line-height: 1.5rem;
+  border-radius: 0.5rem;
+}
+
 .navbar {
   background-color: #FF7B01 !important;
 }
@@ -16,11 +31,14 @@ html, body {
   justify-content: center;
 }
 .navbar .collapse li{
-  margin-left: 60px;
-  font-size: 20px;
+  margin-left: 6.0rem;
+  font-size: 2.0rem;
 }
 .navbar .collapse li:nth-child(1){
   margin-left: 0px !important;
+}
+.navbar .container-fluid .row {
+  width: 100% !important;
 }
 .login .container, .signup .container {
   height: 100%;
@@ -29,12 +47,12 @@ html, body {
   align-items: center;
 }
 .signup .background-card{
-  height: 810px;
+  height: 81.0rem;
 }
 .background-card {
-  border-radius: 5px;
-  height: 700px;
-  width:800px;
+  border-radius: .5rem;
+  height: 70.0rem;
+  width:80.0rem;
   background-color: #FFFFFF;
 }
 .centralize-container {
@@ -44,75 +62,92 @@ html, body {
 }
 .login-text {
   color: #FF7B01;
-  font-size: 25px;
+  font-size: 2.5rem;
 }
 .centralize-container form {
   width: 65%;
 }
 .orange-button {
-  padding: 10px 41px;
+  padding: 1.0rem 4.1rem;
   color: #FFFFFF;
   background: #FF7B01;
-  border-radius: 5px;
-  font-size: 16px;
+  border-radius: .5rem;
+  font-size: 1.6rem;
 }
 .forgot-password {
   color: #000000;
-  font-size: 14px;
+  font-size: 1.4rem;
 }
 .signup-button {
-  padding: 10px 9px;
+  padding: 1.0rem .9rem;
   color: #000000;
   background: #FFFFFF;
-  border: 1px solid #FF7B01;
-  border-radius: 5px;
-  font-size: 16px;
+  border: .1rem solid #FF7B01;
+  border-radius: .5rem;
+  font-size: 1.6rem;
 }
 #carouselExampleIndicators {
   height: 100%;
 }
 .slider-fruit {
-  height: 240px;
+  height: 24.0rem;
+}
+.slider-fruit>div {
+  line-height: 5.0rem;
+  flex-direction:column;
+}
+.slider-fruit div:last-child {
+  line-height: 3.0rem;
+}
+.slider-fruit div:last-child p:last-child {
+  font-size:2.2rem;
+  color: #8E8E8E;
 }
 .carousel-indicators li {
   background: #FF7B01;
   border-radius: 50%;
-  width: 25px;
+  width: 2.5rem;
 }
 .left-slider {
   color: #8E8E8E;
-  font-size: 55px;
+  font-size: 5.5rem;
 }
 .card-img-top {
   width: 50%;
 }
 .card-link {
   color: #FF7B01;
-  font-size: 18px;
+  font-size: 1.8rem;
   text-decoration: underline;
   cursor: pointer;
 }
 .card-title {
-  font-size: 28px;
+  font-size: 2.8rem;
 }
 .card-text.price {
-  font-size: 20px;
+  font-size: 2.0rem;
+}
+
+#products-list {
+  height:30.0rem;
+  justify-content: center;
+  align-items: center;
 }
 
 .modal-container {
-  width: 400px;
+  width: 40.0rem;
   height: 60%;
   background-color: white;
   position: absolute;
   z-index: 99;
-  box-shadow: 1px 3px 8px #888888;
+  box-shadow: .1rem .3rem .8rem #888888;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
   top: 10%;
   visibility: hidden;
-  border-radius: 20px;
+  border-radius: 2.0rem;
 }
 .row {
   width: initial !important;
@@ -145,14 +180,14 @@ html, body {
 }
 
 .product-info {
-  width: 300px;
+  width: 30.0rem;
   height: 60%;
-  border: 1px solid #BFBFBF;
+  border: .1rem solid #BFBFBF;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 20px 0px;
+  padding: 2.0rem .0rem;
 }
 
 .navbar.fixed-bottom {
@@ -160,24 +195,24 @@ html, body {
 }
 
 .to-cart-button {
-  width: 125px;
-  height: 40px;
+  width: 12.5rem;
+  height: 4.0rem;
   background-color: #FF7B01;
-  border-radius: 8px;
+  border-radius: .8rem;
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
-  letter-spacing: 2px;
+  letter-spacing: .2rem;
   font-weight: bolder;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(.0rem .4rem .4rem rgba(0, 0, 0, 0.25));
   cursor: pointer;
   transition: width, background-color 0.5s ease;
 }
 
 .product-image {
-  width: 122px;
-  height: 114px;
+  width: 12.2rem;
+  height: 11.4rem;
 }
 
 .align-item-prop {
@@ -191,17 +226,19 @@ html, body {
 }
 
 .quantity-selector {
-  width: 100px;
-  height: 40px;
-  border: 1px solid;
-  border-radius: 10px;
+  width: 10.0rem;
+  height: 4.0rem;
+  border: .1rem solid;
+  border-radius: 1.0rem;
   display: flex;
   justify-content:space-around;
   align-items: center;
+  font-weight: bolder;
+  cursor: pointer;
 }
 
 .added-to-cart {
-  width: 150px;
+  width: 15.0rem;
   background-color: green;
 }
 
@@ -211,12 +248,12 @@ html, body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 1.0rem;
   background: #F5F5F5;
 }
 
 .top-bar spam {
-  font-size: 14px;
+  font-size: 1.4rem;
   font-weight: 500;
   color: #8E8E8E;
 }
@@ -228,27 +265,31 @@ html, body {
 
 .small-logo {
   /*font-family: 'Sansation';*/
-  font-size: 24px;
+  font-size: 2.4rem;
   text-transform: uppercase;
   color: #FF7B01;
   flex-grow: 1;
   text-align: center;
-  padding-left: 200px;
+  padding-left: 20.0rem;
 }
 
 .top-bar-links {
   display: flex;
   list-style-type: none;
-  width: 200px;
+  width: 20.0rem;
 }
 
 .top-bar-links li {
-  padding-right: 20px;
+  padding-right: 2.0rem;
+}
+
+#logout-button {
+  cursor: pointer;
 }
 
 @media  (max-width: 700px) {
   .small-logo {
-    padding-left: 20px;
+    padding-left: 2.0rem;
     text-align: initial;
   }
   .top-bar spam {
@@ -259,7 +300,7 @@ html, body {
 /* font awesome icons customization*/
 
 .small-icon {
-  font-size: 20px;
+  font-size: 2.0rem;
   color: #8E8E8E;
 }
 
@@ -272,36 +313,36 @@ html, body {
 .admin-main-box {
   display: flex;
   flex-direction: column;
-  margin: 50px;
-  padding: 50px;
-  border: 1px solid #BFBFBF;
+  margin: 5.0rem;
+  padding: 5.0rem;
+  border: .1rem solid #BFBFBF;
 }
 
 .admin-main-box button {
   align-self: center;
-  margin-top: 30px;
+  margin-top: 3.0rem;
 }
 
 .admin-main-box h2 {
-  font-size: 24px;
-  margin-bottom: 30px;
+  font-size: 2.4rem;
+  margin-bottom: 3.0rem;
 }
 
 .admin-search {
   border: 0;
-  border-left: 3px solid #FF7B01;
-  border-bottom: 1px solid #BFBFBF;
-  padding: 10px;
-  margin-bottom: 30px;
+  border-left: .3rem solid #FF7B01;
+  border-bottom: .1rem solid #BFBFBF;
+  padding: 1.0rem;
+  margin-bottom: 3.0rem;
 }
 
 .admin-list-item {
-  border-top: 1px solid #BFBFBF;
+  border-top: .1rem solid #BFBFBF;
   display: flex;
 }
 
 .admin-list-item:last-child {
-  border-bottom: 1px solid #BFBFBF;
+  border-bottom: .1rem solid #BFBFBF;
 }
 
 .admin-list-item a:first-child {
@@ -311,7 +352,7 @@ html, body {
 }
 
 .admin-list-item a {
-  padding-right: 10px;
+  padding-right: 1.0rem;
 }
 #carouselExampleIndicators {
   display: flex;
@@ -328,7 +369,7 @@ html, body {
     display: none;
   }
   form {
-    margin-top: 20px;
+    margin-top: 2.0rem;
   }
   .form-group label {
     display: none;
@@ -340,7 +381,7 @@ html, body {
     width: 100%;
   }
   .signup .background-card {
-    height: 680px;
+    height: 68.0rem;
   }
 }
 @media only screen and (max-width: 767px) {
