Fix modal height

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -136,7 +136,7 @@ label {
 
 .modal-container {
   width: 40.0rem;
-  height: 60%;
+  height: 50rem;
   background-color: white;
   position: absolute;
   z-index: 99;
