--- a/frontend/style.css
+++ b/frontend/style.css
@@ -117,6 +117,24 @@ html, body {
 .row {
   width: initial !important;
 }
+.button-rounded {
+  background-color: #FF7B01;
+  color: #FFFFFF;
+  border-radius: 50%;
+  width: 40px;
+  text-align: center;
+  font-size: 24px;
+}
+.orange-text {
+  color: #FF7B01;
+}
+.purchase {
+  background: #FF7B01;
+  border: none;
+  color: #FFFFFF;
+  padding: 4px 29px;
+  border-radius: 7px;
+}
 .modal-background {
   width: 100%;
   height: 100%;
@@ -158,7 +176,9 @@ html, body {
 .navbar.fixed-bottom {
   background-color: #F5F5F5 !important;
 }
-
+.bold {
+  font-weight: bolder;
+}
 .to-cart-button {
   width: 125px;
   height: 40px;
@@ -357,5 +377,5 @@ html, body {
   }
   .item-prop-container {
     width: 70%;
-}
+  }
 }
