--- a/frontend/style.css
+++ b/frontend/style.css
@@ -377,9 +377,11 @@ label {
   border-bottom: .1rem solid #BFBFBF;
   padding: 1.0rem;
   margin-bottom: 3.0rem;
+  font-size: 16px;
 }
 
 .admin-list-item {
+  font-size: 16px;
   border-top: .1rem solid #BFBFBF;
   display: flex;
 }
