--- a/frontend/style.css
+++ b/frontend/style.css
@@ -40,6 +40,11 @@ label {
 .navbar .container-fluid .row {
   width: 100% !important;
 }
+.navbar-expand-lg {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
 .login .container, .signup .container {
   height: 100%;
   display: flex;
